prettier and copy for projekt

--- a/src/sites/plan/containers/plan/component/plan-form.component.scss
+++ b/src/sites/plan/containers/plan/component/plan-form.component.scss
@@ -32,10 +32,9 @@
       border-color: darken(#1c79b8, 5%);
     }
     &:disabled {
-      opacity: .4;
+      opacity: 0.4;
       cursor: not-allowed;
     }
-
   }
   a {
     display: block;
@@ -47,7 +46,7 @@
 
 .auth-form {
   background: #fff;
-  box-shadow: 0 3px 4px rgba(0,0,0,.1);
+  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.1);
   border-radius: 3px;
   border: 1px solid #c1cedb;
   width: 400px;
@@ -80,19 +79,18 @@
     &::-webkit-input-placeholder {
       color: #5777a8;
     }
-    &[type=email] {
+    &[type="email"] {
       border-radius: 3px 3px 0 0;
     }
-    &[type=password] {
+    &[type="password"] {
       border-radius: 0 0 3px 3px;
       margin: -1px 0 0;
     }
   }
 }
-.dirty{
+.dirty {
   background-color: #ff4040;
-  &:hover{  background-color: red;
-
-
+  &:hover {
+    background-color: red;
   }
 }
