--- a/src/sites/plan/containers/plans/plans.component.scss
+++ b/src/sites/plan/containers/plans/plans.component.scss
@@ -5,7 +5,7 @@
 .plan {
   position: relative;
   background: #fff;
-  box-shadow: 0 3px 4px rgba(0,0,0,.1);
+  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.1);
   border: 1px solid #c1cedb;
   border-radius: 3px;
   overflow: hidden;
@@ -56,5 +56,4 @@
   img {
     margin: 0 10px 0 0;
   }
-
 }
