--- a/src/app/components/app-header/app-header.component.scss
+++ b/src/app/components/app-header/app-header.component.scss
@@ -12,13 +12,11 @@
     right: 0;
     cursor: pointer;
   }
-  span {
-    background: url("../../../assets/logout.svg") no-repeat;
+  i {
     background-size: contain;
-    width: 24px;
-    height: 24px;
+
     display: block;
-    opacity: 0.4;
+    opacity: 0.6;
     &:hover {
       opacity: 0.9;
     }
